# smart-notes-agent

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  skills-lock.json
.claude/skills/: kami
.cursor/skills/: impeccable  kami
app/: __init__.py  config.py  dependencies.py  main.py
app/db/: __init__.py  supabase.py
app/llm/: __init__.py  client.py  types.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  note.py
app/prompts/: __init__.py  loader.py  summarization.txt  summarization_with_context.txt
app/repositories/: __init__.py  base.py  in_memory.py
app/routers/: __init__.py  agent.py  embeddings.py  llm.py  notes.py
app/services/: __init__.py  agent_service.py  ai_service.py  connections_service.py  content_service.py  embedding_service.py  llm_service.py  usage_service.py  user_config_service.py
documentation/: ARCHITECTURE.md  DESIGN.md  DOCKER.md  PRODUCT.md  TEST_ALL_ENDPOINTS.md  smart-note-agent.md
extension/: config.js  manifest.json
extension/background/: service-worker.js
extension/content/: content.js
frontend/: index.html  nginx.conf
scripts/: local-dev.sh  reset-db.sh
supabase/: config.toml  seed.sql
tests/: README.md  __init__.py  conftest.py  test_connections_service.py  test_content_service.py  test_embeddings_router.py  test_health.py  test_llm_router.py  test_spec_compliance.py
webapp/: .env.local.example  SETUP.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
(+55 files in other folders)
