[project]
name = "smart-notes-agent"
version = "1.0.0"
description = "AI-powered personal knowledge management system"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    # LLM providers
    "openai>=1.60.0",
    "anthropic>=0.42.0",
    "google-genai>=1.0.0",
    "mistralai>=1.3.0",
    # Database
    "supabase>=2.0.0",
    # Content extraction
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers --tb=short --disable-warnings"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests",
    "unit: unit tests",
]

[tool.ruff]
target-version = "py311"
line-length = 120
